[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Idle_ArrowUp.gd" type="Script" id=1]
[ext_resource path="res://Images/Arrows/Gray_AU.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 400, 400, 400 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 400, 400, 400, 400 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 400, 0, 400, 400 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": false,
"name": "note_hit",
"speed": 10.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": false,
"name": "pressed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]

[node name="Idle_ArrowUp" type="Area2D"]
script = ExtResource( 1 )

[node name="IdleUpArrow" type="AnimatedSprite" parent="."]
scale = Vector2( 0.15, 0.15 )
frames = SubResource( 5 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[connection signal="area_shape_entered" from="." to="." method="_on_Idle_ArrowUp_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_Idle_ArrowUp_area_shape_exited"]
